refact: enhance auth logic
fix